--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   application:
-    name: yao-user-center
+    name: yao-user-center-backend
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yao-user-center
+    url: jdbc:mysql://localhost:3306/yao-usercenter
     username: root
     password: 6825
-
+  session:
+    timeout: 86400
 server:
   port: 8088
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false
