--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/yao-usercenter
     username: root
     password: 6825
+  # session 失效时间
   session:
     timeout: 86400
 server:
@@ -13,3 +14,8 @@ server:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # 全局删除的实体字段名
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
